temp fix for mobile accordian alignment

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3539,7 +3539,7 @@ p.subheading span {
 	}
 
 	.accordian-title .heading {
-		margin-top: 1.25rem;
+		margin-top: 1.125rem;
 		width: 18rem;
 	}
 
